--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,9 +3,12 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "composite": true,
+    "declaration": true
+  },
+  "include": ["src/**/*"]
 }
