--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true,
+    "outDir": "dist",
+    "rootDir": "src",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "types": ["node", "express"]
+    "target": "es6",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "strict": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
