--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,34 +1,41 @@
-# Node.js dependencies and builds
-node_modules/
-dist/
-build/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Vite cache (if using Vite)
-.vite/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# CRA cache (if using Create React App)
-.cache/
+# testing
+/coverage
 
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# next.js
+/.next/
+/out/
 
-# Static site host configs (optional)
-.vercel/
-.netlify/
+# production
+/build
 
-# Logs
-*.log
-
-# Editor configs
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS-specific files
+# misc
 .DS_Store
-Thumbs.db
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
