--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "moduleResolution": "node",
-    "target": "es6",
+    "target": "ES6",
     "module": "commonjs",
     "esModuleInterop": true,
-    "strict": true
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src", "utils", "dev-wallet.json"]
 }
