--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.9.24",
-    "@solana/wallet-adapter-core": "^0.12.1",
     "@solana/wallet-adapter-react": "^0.15.36",
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.33",
@@ -27,14 +26,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "eslint": "^9.0.0",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "pino-pretty": "^13.0.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.3"
+    "typescript": "^5"
   }
 }
